--- a/css/style.css
+++ b/css/style.css
@@ -1495,7 +1495,7 @@ blockquote {
 
 .pricing-sub {
   font-style: italic;
-  color: #ccc;
+  color: #313131;
   margin: 0 0 25px 0;
 }
 
@@ -1505,6 +1505,9 @@ blockquote {
   background: #f5f5f5;
   padding: 25px;
   position: relative;
+}
+.pricing div{
+  text-align: justify;
 }
 
 .price {
