--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ td {
 }
 
 body {
-  margin: 0;
+  margin: 0 10px;
   padding: 0;
   -webkit-font-smoothing: antialiased;
   overflow-x: hidden;
@@ -347,7 +347,7 @@ section {
 
 #header aside {
   text-align: right;
-  margin-top: 15px;
+  margin-top: 13px;
 }
 
 #header ul {
@@ -584,7 +584,7 @@ section {
   display: inline-block;
   width: 38px;
   height: 71px;
-  color: #111;
+  color: #ffffff;
   cursor: pointer;
   text-transform: uppercase;
   font-size: 22px;
@@ -621,7 +621,7 @@ section {
 
 #nav-trigger span.open,
 #nav-trigger span.open:hover {
-  color: #111;
+  color: #ffffff;
 }
 
 .nav-solid #nav-trigger span.open:hover {
@@ -2397,7 +2397,7 @@ blockquote {
   }
 
   #header.nav-solid aside {
-    top: 20px;
+    top: 5px;
   }
 
   #header aside ul {
